DOCKER-60 : ability to enable JVM GC log file